@@ -2,9 +2,18 @@
     UNRELEASED
     ----------
 
-    - **Backwards incompatible**: Removed support for obsolete version of Django
-      (<=1.7, plus 1.9).
+    - **Backwards incompatible**: Removed support for obsolete versions of
+      Django (<=1.7, plus 1.9).
 
+    - Fix `#58`_: Support creating new custom user models with ``NOT NULL``
+      fields. ``LDAPBackend.get_or_create()`` no longer saves a newly created
+      user but instead simply instantiates it. This allows ``NOT NULL`` fields
+      to be populated by ``USER_ATTR_MAP`` or
+      :data:`django_auth_ldap.backend.populate_user` before saving to avoid an
+      ``IntegrityError``. The user is still saved in
+      ``LDAPBackend._get_or_create()``.
+
+    .. _#58: https://bitbucket.org/illocution/django-auth-ldap/issues/58/
 
 v1.2.15 - 2017-08-17 - Documentation improvements
 -------------------------------------------------
